tests/machine/x/c/pure_global_fold.c
#include <stdio.h>
#include <stdlib.h>

int inc(int x) { return x + k; }

int main() {
  int k = 2;
  printf("%d\n", inc(3));
  return 0;
}
